# bacon

./: .editorconfig  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
bacon/: __init__.py  bacon.py
bacon/cli/: __init__.py  entry.py
