# ----------------------------------------------------------------------------------------------------------------------
# PRIMARY SETTINGS
[tool.poetry]
name = "bacon"
version = "0.1.0"
description = "CLI client to Bacon Ipsum public API."
authors = ["Jesse Butcher <boweeb@gmail.com>"]
license = "MIT"

keywords = ["bacon", "http", "api", "lorem", "ipsum"]

homepage = "https://github.com/boweeb/bacon"
repository = "git@github.com:boweeb/bacon.git"
documentation = "file://./README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
bacon = 'bacon.cli.entry:main'


# ----------------------------------------------------------------------------------------------------------------------
# DEPENDENCIES
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24"
click = "^8.0"            # CLI framework
click-aliases = "^1.0"    # Extends Click with command aliases
rich = "^10.6"             # ASCII decorator

[tool.poetry.dev-dependencies]
ipython = "*"               # Alternative REPL
bpython = "*"               # Alternative REPL
coverage = "*"              # Code coverage report
pytest = "*"                # Test suite framework
pytest-runner = "*"         # Test suite runner
pytest-cov = "*"            # Integrate coverage with tests
pytest-bdd = "*"            # Gherkin support for pytest
#pdoc3 = "*"                 # API documentation generator
#tox = "*"                   # Test environment management
#pylama = "*"                # Linting suite
#Sphinx = "*"                # Project documentation generator
flake8 = "*"


# ----------------------------------------------------------------------------------------------------------------------
# TOOLS
[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
atomic = true
lines_after_imports = 2


# ----------------------------------------------------------------------------------------------------------------------
# FIN
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
